tests/transpiler/x/swift/exists_builtin.error
exit status 1
/tmp/TestSwiftTranspiler_VMValid_Golden2846850477/014/main.swift:4:13: error: cannot find 'exists' in scope
 2 | import Foundation
 3 | let data = [1, 2]
 4 | let flag = (exists(({ var _res: [Int] = []
   |             `- error: cannot find 'exists' in scope
 5 | for x in data {
 6 |     if ((x as! Int) == 1) {

/tmp/TestSwiftTranspiler_VMValid_Golden2846850477/014/main.swift:6:12: warning: forced cast of 'Int' to same type has no effect
 4 | let flag = (exists(({ var _res: [Int] = []
 5 | for x in data {
 6 |     if ((x as! Int) == 1) {
   |            `- warning: forced cast of 'Int' to same type has no effect
 7 |         _res.append((x as! Int))
 8 |     }

/tmp/TestSwiftTranspiler_VMValid_Golden2846850477/014/main.swift:7:24: warning: forced cast of 'Int' to same type has no effect
 5 | for x in data {
 6 |     if ((x as! Int) == 1) {
 7 |         _res.append((x as! Int))
   |                        `- warning: forced cast of 'Int' to same type has no effect
 8 |     }
 9 | }
