tests/transpiler/x/swift/exists_builtin.swift
// Generated by Mochi transpiler v0.10.33 on 2025-07-21 18:23:56 GMT+7
import Foundation
let data = [1, 2]
let flag = (exists(({ var _res: [Int] = []
for x in data {
    if ((x as! Int) == 1) {
        _res.append((x as! Int))
    }
}
return _res })()) as! Bool)
print(String(describing: (flag as! Bool)))
